syntax = "proto3";

package frontend.cart;

import "api-tools.proto";
import "frontend/common.proto";
import "frontend/product_page.proto";


option go_package = "/frontend/cart";

message AddCartReq {
  uint32 product_id = 1;
  int32 product_num = 2;
}




message CartItem {
  uint32 product_id = 1;
  int32  quantity = 2;
  product.Product product = 3;
}

message Cart {
  uint32 user_id = 1;
  repeated CartItem items = 2;
  float total_price = 3;
}

message GetCartReq {
}

message GetCartResp {
  Cart cart = 1;
}



service CartService {
  rpc AddCartItem(AddCartReq) returns (common.Empty) {
    option (api.post) = "cart/add";
  }
  rpc GetCart(GetCartReq) returns (GetCartResp) {
    option (api.get) = "cart/get_all";
  }
}